// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricQueryBuilder snapshot: totals restricted to filtered dimension groups > matches snapshot for a custom bin dimension restriction 1`] = `
"WITH
  source_rows AS (
    WITH
      age_range_cte AS (
        SELECT
          FLOOR(MIN("table1".dim1)) AS min_id,
          CEIL(MAX("table1".dim1)) AS max_id,
          FLOOR((MAX("table1".dim1) - MIN("table1".dim1)) / 3) AS bin_width
        FROM
          "db"."schema"."table1" AS "table1"
      ),
      metrics AS (
        SELECT
          "table1".dim1 AS "table1_dim1",
          CASE
            WHEN "table1".dim1 IS NULL THEN NULL
            WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0
            AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN (
              age_range_cte.min_id + age_range_cte.bin_width * 0 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 1
            )
            WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1
            AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN (
              age_range_cte.min_id + age_range_cte.bin_width * 1 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 2
            )
            ELSE (
              age_range_cte.min_id + age_range_cte.bin_width * 2 || ' - ' || age_range_cte.max_id
            )
          END AS "age_range",
          CASE
            WHEN "table1".dim1 IS NULL THEN 3
            WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0
            AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN 0
            WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1
            AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN 1
            ELSE 2
          END AS "age_range_order",
          MAX("table1".number_column) AS "table1_metric1"
        FROM
          "db"."schema"."table1" AS "table1"
          CROSS JOIN age_range_cte
        GROUP BY
          1,
          2,
          3
      )
    SELECT
      *
    FROM
      metrics
    WHERE
      ((("table1_metric1") IN (0)))
  ),
  source_dimension_groups AS (
    SELECT DISTINCT
      "table1_dim1",
      "age_range"
    FROM
      source_rows
  ),
  age_range_cte AS (
    SELECT
      FLOOR(MIN("table1".dim1)) AS min_id,
      CEIL(MAX("table1".dim1)) AS max_id,
      FLOOR((MAX("table1".dim1) - MIN("table1".dim1)) / 3) AS bin_width
    FROM
      "db"."schema"."table1" AS "table1"
  )
SELECT
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  CROSS JOIN age_range_cte
  INNER JOIN source_dimension_groups ON (
    ("table1".dim1) = source_dimension_groups."table1_dim1"
    OR (
      ("table1".dim1) IS NULL
      AND source_dimension_groups."table1_dim1" IS NULL
    )
  )
  AND (
    (
      CASE
        WHEN "table1".dim1 IS NULL THEN NULL
        WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0
        AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN (
          age_range_cte.min_id + age_range_cte.bin_width * 0 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 1
        )
        WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1
        AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN (
          age_range_cte.min_id + age_range_cte.bin_width * 1 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 2
        )
        ELSE (
          age_range_cte.min_id + age_range_cte.bin_width * 2 || ' - ' || age_range_cte.max_id
        )
      END
    ) = source_dimension_groups."age_range"
    OR (
      (
        CASE
          WHEN "table1".dim1 IS NULL THEN NULL
          WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 0
          AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 1 THEN (
            age_range_cte.min_id + age_range_cte.bin_width * 0 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 1
          )
          WHEN "table1".dim1 >= age_range_cte.min_id + age_range_cte.bin_width * 1
          AND "table1".dim1 < age_range_cte.min_id + age_range_cte.bin_width * 2 THEN (
            age_range_cte.min_id + age_range_cte.bin_width * 1 || ' - ' || age_range_cte.min_id + age_range_cte.bin_width * 2
          )
          ELSE (
            age_range_cte.min_id + age_range_cte.bin_width * 2 || ' - ' || age_range_cte.max_id
          )
        END
      ) IS NULL
      AND source_dimension_groups."age_range" IS NULL
    )
  )
LIMIT
  1"
`;

exports[`MetricQueryBuilder snapshot: totals restricted to filtered dimension groups > matches snapshot for a grand total restricted by a metric filter 1`] = `
"WITH
  source_rows AS (
    WITH
      metrics AS (
        SELECT
          "table1".dim1 AS "table1_dim1",
          MAX("table1".number_column) AS "table1_metric1"
        FROM
          "db"."schema"."table1" AS "table1"
        GROUP BY
          1
      )
    SELECT
      *
    FROM
      metrics
    WHERE
      ((("table1_metric1") IN (0)))
  ),
  source_dimension_groups AS (
    SELECT DISTINCT
      "table1_dim1"
    FROM
      source_rows
  )
SELECT
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  INNER JOIN source_dimension_groups ON (
    ("table1".dim1) = source_dimension_groups."table1_dim1"
    OR (
      ("table1".dim1) IS NULL
      AND source_dimension_groups."table1_dim1" IS NULL
    )
  )
LIMIT
  1"
`;

exports[`MetricQueryBuilder snapshot: totals restricted to filtered dimension groups > matches snapshot for a grand total restricted by a table-calculation filter 1`] = `
"WITH
  source_rows AS (
    WITH
      metrics AS (
        SELECT
          "table1".dim1 AS "table1_dim1",
          MAX("table1".number_column) AS "table1_metric1"
        FROM
          "db"."schema"."table1" AS "table1"
        GROUP BY
          1
      ),
      table_calculations AS (
        SELECT
          *,
          table1_dim1 + table1_metric1 AS "calc3"
        FROM
          metrics
      )
    SELECT
      *
    FROM
      table_calculations
    WHERE
      ((("calc3") IN ('my value')))
  ),
  source_dimension_groups AS (
    SELECT DISTINCT
      "table1_dim1"
    FROM
      source_rows
  )
SELECT
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  INNER JOIN source_dimension_groups ON (
    ("table1".dim1) = source_dimension_groups."table1_dim1"
    OR (
      ("table1".dim1) IS NULL
      AND source_dimension_groups."table1_dim1" IS NULL
    )
  )
LIMIT
  1"
`;

exports[`MetricQueryBuilder snapshot: totals restricted to filtered dimension groups > matches snapshot for a pivoted column total restricted by a metric filter 1`] = `
"WITH
  source_rows AS (
    WITH
      metrics AS (
        SELECT
          "table1".dim1 AS "table1_dim1",
          "table1".shared AS "table1_shared",
          MAX("table1".number_column) AS "table1_metric1"
        FROM
          "db"."schema"."table1" AS "table1"
        GROUP BY
          1,
          2
      )
    SELECT
      *
    FROM
      metrics
    WHERE
      ((("table1_metric1") IN (0)))
  ),
  source_dimension_groups AS (
    SELECT DISTINCT
      "table1_dim1",
      "table1_shared"
    FROM
      source_rows
  )
SELECT
  "table1".shared AS "table1_shared",
  MAX("table1".number_column) AS "table1_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  INNER JOIN source_dimension_groups ON (
    ("table1".dim1) = source_dimension_groups."table1_dim1"
    OR (
      ("table1".dim1) IS NULL
      AND source_dimension_groups."table1_dim1" IS NULL
    )
  )
  AND (
    ("table1".shared) = source_dimension_groups."table1_shared"
    OR (
      ("table1".shared) IS NULL
      AND source_dimension_groups."table1_shared" IS NULL
    )
  )
GROUP BY
  1
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;
